# ros2_adaptive_assembly

./: .dockerignore  .gitignore  AGENTS.md  LICENSE  README.md  README.md.bak
docker/: Dockerfile  (+3 more)
src/adaptive_assembly_benchmark/: README.md  package.xml  setup.cfg  setup.py
src/adaptive_assembly_benchmark/adaptive_assembly_benchmark/: __init__.py  contact_lite_insertion_evaluator_node.py
src/adaptive_assembly_bringup/: README.md  package.xml  setup.cfg  setup.py
src/adaptive_assembly_bringup/config/: adaptive_assembly_benchmark_fixed_yaw_params.yaml  adaptive_assembly_benchmark_narrow_params.yaml  adaptive_assembly_benchmark_params.yaml  adaptive_assembly_benchmark_wide_params.yaml  adaptive_assembly_fixed_socket_params.yaml  adaptive_assembly_params.yaml  adaptive_assembly_physical_pick_place_params.yaml  adaptive_assembly_sequence_reachable_params.yaml  adaptive_assembly_visual_single_trial_params.yaml  physical_workcell_planning_scene.yaml
src/adaptive_assembly_bringup/launch/: adaptive_assembly_contact_lite_insertion_benchmark.launch.py  adaptive_assembly_full_episode_demo.launch.py  adaptive_assembly_full_episode_visual_demo.launch.py  adaptive_assembly_full_gazebo_execution_demo.launch.py  adaptive_assembly_full_physical_pick_place_demo.launch.py  adaptive_assembly_gazebo_grasp_attach_demo.launch.py  adaptive_assembly_gazebo_ros2_control_success_demo.launch.py  adaptive_assembly_gazebo_target_sync_demo.launch.py  adaptive_assembly_gazebo_workcell_demo.launch.py  adaptive_assembly_gripper_controller_demo.launch.py  adaptive_assembly_logical_grasp_demo.launch.py  adaptive_assembly_opencv_aruco_demo.launch.py  adaptive_assembly_panda_demo.launch.py  adaptive_assembly_panda_planning_benchmark.launch.py  adaptive_assembly_panda_planning_benchmark_attempts1.launch.py  adaptive_assembly_panda_planning_benchmark_attempts5.launch.py  adaptive_assembly_panda_planning_benchmark_fixed_yaw.launch.py  adaptive_assembly_panda_planning_benchmark_guarded.launch.py  adaptive_assembly_panda_planning_benchmark_narrow.launch.py  adaptive_assembly_panda_planning_benchmark_no_dynamic_target.launch.py  adaptive_assembly_panda_planning_benchmark_slow_scaling.launch.py  adaptive_assembly_panda_planning_benchmark_wide.launch.py  adaptive_assembly_panda_planning_benchmark_with_dynamic_target.launch.py  adaptive_assembly_panda_planning_demo.launch.py  adaptive_assembly_panda_ros2_control_execution.launch.py  adaptive_assembly_panda_sequence_dry_run_execution.launch.py  adaptive_assembly_panda_sequence_planning_demo.launch.py  adaptive_assembly_panda_sequence_planning_fixed_start.launch.py  adaptive_assembly_panda_sequence_planning_gazebo.launch.py  adaptive_assembly_panda_sequence_planning_reachable.launch.py  adaptive_assembly_physical_pick_place_execution.launch.py  adaptive_assembly_physical_planning.launch.py  adaptive_assembly_pipeline.launch.py  adaptive_assembly_recovery_orchestration_demo.launch.py  adaptive_assembly_recovery_supervisor_demo.launch.py  adaptive_assembly_ros2_control_success_demo.launch.py  adaptive_assembly_simulated_vision_demo.launch.py
src/adaptive_assembly_bringup/test/: test_physical_planning_scene_launch.py  test_physical_sim_time_launch.py  test_physical_socket_profile.py  test_physical_socket_profile_config.py  test_physical_tcp_contract.py  test_physical_tcp_runtime_checker.py  test_robot_model_source_contract.py  test_target_pose_source_launch.py
src/adaptive_assembly_manipulation/: README.md  package.xml  setup.cfg  setup.py
src/adaptive_assembly_manipulation/adaptive_assembly_manipulation/: __init__.py  attachment_math.py  contact_aware_gripper.py  gazebo_attach_detach_node.py  gripper_action_bridge_node.py  logical_grasp_lifecycle_node.py
src/adaptive_assembly_manipulation/launch/: gazebo_attach_detach.launch.py  gripper_action_bridge.launch.py  logical_grasp_lifecycle.launch.py
src/adaptive_assembly_manipulation/test/: test_contact_aware_gripper.py  test_gripper_action_bridge_contract.py
src/adaptive_assembly_planning/: CMakeLists.txt  package.xml
src/adaptive_assembly_planning/launch/: adaptive_assembly_markers.launch.py  assembly_sequence_planning.launch.py  dynamic_target_scene.launch.py  grasp_clearance_calibration.launch.py  panda_assembly_pose_adapter.launch.py  panda_grasp_pose_adapter.launch.py  panda_lift_pose_adapter.launch.py  panda_place_pose_adapter.launch.py  panda_pre_grasp_pose_adapter.launch.py  panda_pre_place_pose_adapter.launch.py  panda_retreat_pose_adapter.launch.py  planning_scene_audit.launch.py  pre_grasp_planning.launch.py  static_planning_scene.launch.py
src/adaptive_assembly_planning/src/: adaptive_assembly_marker_node.cpp  assembly_sequence_planning_node.cpp  dynamic_target_scene_node.cpp  grasp_clearance_calibration_node.cpp  grasp_clearance_validation.cpp  panda_assembly_pose_adapter_node.cpp  panda_pre_grasp_pose_adapter_node.cpp  payload_planning_scene_manager_node.cpp  physical_target_planning_scene_node.cpp  planning_scene_audit_node.cpp  pre_grasp_planning_node.cpp  static_planning_scene_node.cpp
src/adaptive_assembly_planning/test/: test_assembly_sequence_planner_contract.py  test_grasp_clearance_calibration.py  test_payload_planning_contract.py  test_planning_contract.cpp
src/adaptive_assembly_recovery/: README.md  package.xml  setup.cfg  setup.py
src/adaptive_assembly_recovery/adaptive_assembly_recovery/: __init__.py  recovery_orchestrator_node.py  recovery_supervisor_node.py
src/adaptive_assembly_recovery/launch/: recovery_orchestrator.launch.py
src/adaptive_assembly_sim/: README.md  package.xml  setup.cfg  setup.py
src/adaptive_assembly_sim/adaptive_assembly_sim/: __init__.py  activate_gazebo_controllers_node.py  fake_panda_finger_joint_state_node.py  gazebo_entity_pose_observer_node.py  gazebo_robot_description_renderer.py  gazebo_target_pose_adapter_node.py  gazebo_target_pose_sync_node.py  robot_model_parity.py
src/adaptive_assembly_sim/config/: panda_ros2_control.yaml
src/adaptive_assembly_sim/launch/: adaptive_assembly_panda_gazebo.launch.py  adaptive_assembly_workcell.launch.py  (+3 more)
(+283 files in other folders)
