<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>adaptive_assembly_benchmark</name>
  <version>0.0.0</version>
  <description>Contact-lite geometric benchmarks for adaptive assembly.</description>
  <maintainer email="chunzhi.wu@mailbox.tu-dresden.de">Chunzhi Wu</maintainer>
  <license>Apache-2.0</license>
  <depend>geometry_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <export><build_type>ament_python</build_type></export>
</package>
