<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>adaptive_assembly_bringup</name>
  <version>0.0.0</version>
  <description>Launch entry points for the adaptive assembly pipeline.</description>
  <maintainer email="chunzhi.wu@mailbox.tu-dresden.de">nate</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>adaptive_assembly_perception</depend>
  <depend>adaptive_assembly_task</depend>
  <depend>adaptive_assembly_planning</depend>
  <depend>adaptive_assembly_execution</depend>
  <depend>adaptive_assembly_recovery</depend>
  <depend>adaptive_assembly_manipulation</depend>
  <depend>adaptive_assembly_benchmark</depend>
  <exec_depend>adaptive_assembly_episode</exec_depend>
  <exec_depend>adaptive_assembly_sim</exec_depend>
  <depend>moveit_resources_panda_moveit_config</depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
