<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>adaptive_assembly_manipulation</name>
  <version>0.0.0</version>
  <description>Simulator-only logical gripper and grasp lifecycle.</description>
  <maintainer email="chunzhi.wu@mailbox.tu-dresden.de">Chunzhi Wu</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ros_gz_interfaces</depend>
  <depend>tf2_ros</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
