<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>adaptive_assembly_recovery</name>
  <version>0.0.0</version>
  <description>Closed-loop recovery supervision for adaptive assembly.</description>
  <maintainer email="chunzhi.wu@mailbox.tu-dresden.de">nate</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
